# parrot-rs

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  sst.config.ts
.github/workflows/: deploy-prod.yml
src/: eleven_labs.rs  helpers.rs  lib.rs
src/aws/: s3.rs  sqs.rs
src/controllers/: mod.rs
src/controllers/dev/: controller.rs  mod.rs
src/controllers/outputs/: controller.rs  mod.rs
src/controllers/samples/: controller.rs  mod.rs
src/controllers/voices/: controller.rs  mod.rs
src/models/: mod.rs  output.rs  voice.rs
